# timershift

./: .eslintrc.cjs  .gitignore  .pnp.cjs  .ts-standard.json  LICENSE  README.md  eslint.config.cjs  index.html  lighthouserc.json  package.json  playwright.config.ts  tailwind.config.cjs  vite.config.ts
src/: App.css  App.test.tsx  App.tsx  constants.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: HistoryPanel.tsx  TimerAdjustModal.tsx  TimerCard.tsx  TimerModal.test.tsx  TimerModal.tsx  TimerTransferModal.tsx  uiClasses.ts
src/hooks/: useTimers.ts
src/test/: setup.ts
src/utils/: dndKitPreact.ts  history.test.ts  history.ts  theme.ts  time.ts
tests/e2e/: timer-card.spec.ts
