[package]
name = "TimerShift"
version = "0.0.1"
description = "Run mulitple timers at once and easily move chunks of time between timers"
authors = ["Dee Rance"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "icon-png", "path-all", "fs-write-file", "fs-read-file", "fs-create-dir", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
